解决服务端相关Bug，消费端目前存在些许逻辑错误，后续修正。

--- a/wheel-demo/wheel-demo-xml/wheel-demo-xml-consumer/pom.xml
+++ b/wheel-demo/wheel-demo-xml/wheel-demo-xml-consumer/pom.xml
@@ -38,6 +38,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.wheel.ctgu.spring</groupId>
+            <artifactId>wheel-config-spring</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
