--- a/wheel-registry/wheel-registry-zookeeper/pom.xml
+++ b/wheel-registry/wheel-registry-zookeeper/pom.xml
@@ -54,6 +54,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
