--- a/wheel-rpc/rpc-core/pom.xml
+++ b/wheel-rpc/rpc-core/pom.xml
@@ -40,6 +40,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
         </dependency>
         <dependency>
             <groupId>com.wheel.ctgu.common</groupId>
@@ -51,6 +52,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>30.1.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wheel.ctgu</groupId>
+            <artifactId>wheel-serialization-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
