--- a/wheel-demo/wheel-demo-xml/wheel-demo-xml-consumer/pom.xml
+++ b/wheel-demo/wheel-demo-xml/wheel-demo-xml-consumer/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>wheel-config-spring</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
