--- a/wheel-invoker/pom.xml
+++ b/wheel-invoker/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wheel.ctgu</groupId>
-    <artifactId>wheel-json</artifactId>
+    <artifactId>wheel-invoker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>wheel-json</name>
+    <name>wheel-invoker</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -21,11 +21,10 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.80</version>
+            <groupId>com.wheel.ctgu</groupId>
+            <artifactId>wheel-remote</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -38,18 +37,13 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.wheel.ctgu</groupId>
-            <artifactId>wheel-serialization-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
         </dependency>
         <dependency>
             <groupId>com.wheel.ctgu</groupId>
-            <artifactId>rpc-core</artifactId>
+            <artifactId>wheel-remote-netty</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -84,7 +78,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.wheel.ctgu.WheelJsonApplication</mainClass>
+                    <mainClass>com.wheel.ctgu.WheelInvokerApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
